# cine-catch

./: .gitignore  cine_catch.erd  main.py  pyproject.toml  requirements.txt
app/: main.py
app/core/: database.py
app/models/: movie.py  theater.py  user.py
